sync repo and added new notebook

--- a/convert_dataset.ipynb
+++ b/convert_dataset.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -192,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -293,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -302,13 +302,7 @@
      "text": [
       "[{weight: 23.2, evtNum: 502880, cscRechitCluster_match_gLLP: [True], ...}, ...]\n",
       "[{weight: 23.2, evtNum: 502880, cscRechitCluster_match_gLLP: True, ...}, ...]\n",
-      "[(23.16449928, 502880,  True, 0.02191958, 0, -2.09389591,  2.35975623, 201.74163818, -807.6998291 ,  True, False, 167.47589111, -161.31951904,  156.05465698,  -913.4800415 ,  0.74229854,  9.99267864,  2.15098   , 10.21867847, 332, 332, 27.36060333, 21.75690079, 7.87427521e+01, 19.52650452, 31.43990517, 0.02367923, 0.08550619, 0.06972149, 0.11032858, 0.08621787, 0.06883947,   4.19769716, -19.64081573,  9.22317429e+01,  0.52574122,  1.40255404,  3.55164719,  2.37278175, -2.11152554, 12.28244972, False, False, 53.76042557, 1.82446671, 8.56519604,  True,  True, 0, 0, 0, 0, 332, 3, -2.84355831, -3, 0.58734941,        10, 1989996768, 3.22865600e+06,  0, 0, 0, 0,  0, 0,  0, 0, 0, 6,   0, 0, 91,  0, 195,  0, 40,   0,  0.47342801)\n",
-      " (23.16449928, 502904,  True, 0.01971359, 0, -1.53300369,  2.07229352, 416.86373901, -917.22332764,  True, False, 127.91236877, -211.93519592,  405.30789185, -1009.06567383, -0.13320465, 10.5489769 ,  2.97408819, 11.21714401, 338, 338, 26.25686264, 34.46215439, 2.70008278e+01, 20.54719543, 37.75804138, 0.02246091, 0.07473581, 0.04663371, 0.0880917 , 0.07522298, 0.04584372,   6.06836557,   2.37359428,  6.60483093e+01, -0.40939018, -0.90044963,  5.5855422 ,  2.05259514, -1.53222942,  0.        , False, False,  0.        , 0.        , 0.        , False, False, 0, 0, 0, 0, 338, 2, -3.92011833, -4, 0.92011833,        10, 1989996768, 3.17134250e+06,  0, 0, 0, 0,  0, 0,  0, 0, 0, 0,   0, 0,  0,  0,   0, 27,  0, 311,  1.24803591)\n",
-      " (23.16449928, 502907,  True, 0.07697913, 1, -1.42965794,  1.59207499, 285.70629883, -559.82220459,  True,  True, 124.814888  ,   -9.75085449,  389.08557129,  -702.44378662, -0.91873842, 10.16473866,  1.82524407, 10.78285789, 794, 794, 28.41675186, 53.86441803, 4.68623314e+01, 27.63545609, 54.93062973, 0.04365182, 0.10270378, 0.06545264, 0.12178714, 0.10527186, 0.06123684, -42.7846489 ,  60.9749794 , -1.12350662e+02,  6.27622747,  3.24268103,  3.92938733,  1.59585202, -1.35277152,  0.        , False, False,  0.        , 0.        , 0.        , False, False, 1, 1, 9, 2, 794, 2, -1.11335015, -1, 0.88664985, 584154192,       1370, 3.22418123e-01,  0, 0, 0, 0,  0, 0,  0, 0, 0, 0, 704, 0,  0, 90,   0,  0,  0,   0, -2.18832135)\n",
-      " ...\n",
-      " (23.16449928, 552967,  True, 0.04358719, 1,  1.22664559, -1.91864455, 471.16485596,  744.2734375 ,  True, False,  89.41796112, -169.74650574, -466.92401123,   815.00738525,  3.23753071, 14.44301128,  4.11278152, 14.4870615 ,  89,  89, 20.85918045, 39.96293259, 1.23871826e-01, 21.26606369, 41.86697388, 0.01187201, 0.07426473, 0.03371572, 0.08155979, 0.07429523, 0.03364844,  -3.34337568,  15.74796295, -4.58709337e-02, -0.26220363,  0.26777849,  0.13137688, -1.91948402,  1.27022469,  0.        , False, False,  0.        , 0.        , 0.        , False, False, 0, 0, 0, 0,  89, 1,  2.        ,  2, 1.        ,        10, 1989996768, 1.20439750e+07,  0, 0, 0, 0, 89, 0,  0, 0, 0, 0,   0, 0,  0,  0,   0,  0,  0,   0,  1.39208388)\n",
-      " (23.16449928, 552967, False, 1.98286402, 0,  0.13254355,  1.0569216 ,  89.09283447,   21.890522  , False, False,  60.67770386,   41.40847778,  162.79722595,   673.95892334, 34.92503357, 55.67550659, 11.5317173 , 54.25366974,  50,  50, 39.6954155 , 42.45274353, 1.35190445e+02, 17.63067818, 40.54957199, 0.14121351, 0.21693285, 0.24991745, 0.33093593, 0.27592629, 0.18271087,  28.6298542 ,  -2.25695109,  2.25441895e+02, -0.92690271, -1.22714949,  1.50946736,  1.32172191,  2.09764671,  0.        , False, False,  0.        , 1.00930631, 5.36958694, False,  True, 0, 0, 0, 0,  50, 1,  1.        ,  1, 0.75999999,        10, 1989996768, 2.14382760e+07, 38, 0, 0, 8,  0, 0,  0, 4, 0, 0,   0, 0,  0,  0,   0,  0,  0,   0, -1.64989555)\n",
-      " (23.16449928, 552984,  True, 0.06814209, 0,  1.45155191,  0.83151579, 427.33621216,  861.99578857,  True, False,  67.67504883,  289.1647644 ,  325.57781982,   946.23693848, -0.14253123,  7.5475812 , -0.35083535,  7.5729847 ,  80,  80, 17.55817032, 18.14661598, 5.93350865e-02, 13.83296299, 22.585186  , 0.00716998, 0.04694572, 0.02595684, 0.05364382, 0.0469641 , 0.02592358,   1.99633062,   2.50198841,  9.32374597e-03, -0.6460253 , -0.87380886, -1.05704701,  0.84456205,  1.51843345,  0.        , False, False,  0.        , 0.        , 0.        , False, False, 0, 0, 0, 0,  80, 1,  3.        ,  3, 1.        ,        10, 1989996768, 1.33989220e+07,  0, 0, 0, 0,  0, 0, 80, 0, 0, 0,   0, 0,  0,  0,   0,  0,  0,   0, -1.42464638)]\n",
+      "None\n",
       "None\n"
      ]
     }
@@ -322,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -615,12 +609,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "#save the pandas dataframe\n",
-    "df.to_hdf('/nfs/dust/cms/user/lbenato/ML_LLP/MDS_regression/datasets/test_df_v6.h5', 'df', format='table' if (len(cols)<=2000) else 'fixed')"
+    "df.to_hdf('/nfs/dust/cms/user/loewetob/ML_LLP/MDS_regression/datasets/test_df_v6.h5', 'df', format='table' if (len(cols)<=2000) else 'fixed')"
    ]
   },
   {
