Implemented function to read clusters and hits, and pad hits according to the cluster it belongs

--- a/convert_dataset_rechits.ipynb
+++ b/convert_dataset_rechits.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -116,32 +116,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['weight', 'evtNum', 'nCscRechitClusters', 'cscRechitCluster_match_gLLP', 'cscRechitClusterEta', 'cscRechitClusterIndex', 'cscClusteredRechitsEta', 'cscClusteredRechitsIndex']\n"
+      "['weight', 'evtNum', 'nCscRechitClusters', 'cscRechitCluster_match_gLLP', 'cscRechitCluster_match_gLLP_minDeltaR', 'cscRechitCluster_match_gLLP_index', 'cscRechitCluster_match_gLLP_eta', 'cscRechitCluster_match_gLLP_phi', 'cscRechitCluster_match_gLLP_decay_r', 'cscRechitCluster_match_gLLP_decay_z', 'cscRechitCluster_match_gLLP_csc', 'cscRechitCluster_match_gLLP_dt', 'cscRechitCluster_match_gLLP_e', 'cscRechitClusterX', 'cscRechitClusterY', 'cscRechitClusterZ', 'cscRechitClusterTimeWeighted', 'cscRechitClusterTimeSpreadWeightedAll', 'cscRechitClusterTime', 'cscRechitClusterTimeSpread', 'cscRechitClusternXY', 'cscRechitClusternZ', 'cscRechitClusterXSpread', 'cscRechitClusterYSpread', 'cscRechitClusterZSpread', 'cscRechitClusterXYSpread', 'cscRechitClusterRSpread', 'cscRechitClusterEtaPhiSpread', 'cscRechitClusterEtaSpread', 'cscRechitClusterPhiSpread', 'cscRechitClusterDeltaRSpread', 'cscRechitClusterMajorAxis', 'cscRechitClusterMinorAxis', 'cscRechitClusterSkewX', 'cscRechitClusterSkewY', 'cscRechitClusterSkewZ', 'cscRechitClusterKurtX', 'cscRechitClusterKurtY', 'cscRechitClusterKurtZ', 'cscRechitClusterPhi', 'cscRechitClusterEta', 'cscRechitClusterJetVetoPt', 'cscRechitClusterJetVetoLooseId', 'cscRechitClusterJetVetoTightId', 'cscRechitClusterJetVetoE', 'cscRechitClusterMuonVetoPt', 'cscRechitClusterMuonVetoE', 'cscRechitClusterMuonVetoLooseId', 'cscRechitClusterMuonVetoGlobal', 'cscRechitCluster_match_dtSeg_0p4', 'cscRechitCluster_match_MB1Seg_0p4', 'cscRechitCluster_match_RE12_0p4', 'cscRechitCluster_match_RB1_0p4', 'cscRechitClusterSize', 'cscRechitClusterNStation10', 'cscRechitClusterAvgStation10', 'cscRechitClusterMaxStation', 'cscRechitClusterMaxStationRatio', 'cscRechitClusterNChamber', 'cscRechitClusterMaxChamber', 'cscRechitClusterMaxChamberRatio', 'cscRechitClusterNRechitChamberPlus11', 'cscRechitClusterNRechitChamberPlus12', 'cscRechitClusterNRechitChamberPlus13', 'cscRechitClusterNRechitChamberPlus21', 'cscRechitClusterNRechitChamberPlus22', 'cscRechitClusterNRechitChamberPlus31', 'cscRechitClusterNRechitChamberPlus32', 'cscRechitClusterNRechitChamberPlus41', 'cscRechitClusterNRechitChamberPlus42', 'cscRechitClusterNRechitChamberMinus11', 'cscRechitClusterNRechitChamberMinus12', 'cscRechitClusterNRechitChamberMinus13', 'cscRechitClusterNRechitChamberMinus21', 'cscRechitClusterNRechitChamberMinus22', 'cscRechitClusterNRechitChamberMinus31', 'cscRechitClusterNRechitChamberMinus32', 'cscRechitClusterNRechitChamberMinus41', 'cscRechitClusterNRechitChamberMinus42', 'cscRechitClusterMet_dPhi', 'cscClusteredRechitsEta', 'cscClusteredRechitsIndex', 'cscClusteredRechitsEta', 'cscClusteredRechitsPhi', 'cscClusteredRechitsX', 'cscClusteredRechitsY', 'cscClusteredRechitsZ', 'cscClusteredRechitsTpeak', 'cscClusteredRechitsTwire', 'cscClusteredRechitsChamber', 'cscClusteredRechitsStation', 'cscClusteredRechitsIndex']\n"
      ]
     }
    ],
    "source": [
-    "branches_to_read = [\n",
-    "\"weight\",\n",
-    "\"evtNum\",\n",
-    "\"nCscRechitClusters\",\n",
-    "\"cscRechitCluster_match_gLLP\",\n",
-    "\"cscRechitClusterEta\",\n",
-    "\"cscRechitClusterIndex\",\n",
+    "branches_rechits = [\n",
     "\"cscClusteredRechitsEta\",\n",
+    "\"cscClusteredRechitsPhi\",\n",
+    "\"cscClusteredRechitsX\",\n",
+    "\"cscClusteredRechitsY\",\n",
+    "\"cscClusteredRechitsZ\",\n",
+    "\"cscClusteredRechitsTpeak\",\n",
+    "\"cscClusteredRechitsTwire\",\n",
+    "\"cscClusteredRechitsChamber\",\n",
+    "\"cscClusteredRechitsStation\",\n",
     "\"cscClusteredRechitsIndex\",\n",
     "]\n",
+    "\n",
+    "branches_to_read += branches_rechits\n",
     "\n",
     "default_values_rechits ={}\n",
     "default_values_rechits[\"cscClusteredRechitsIndex\"] = -1\n",
     "default_values_rechits[\"cscClusteredRechitsEta\"] = -999.\n",
+    "default_values_rechits[\"cscClusteredRechitsPhi\"] = -999.\n",
+    "default_values_rechits[\"cscClusteredRechitsX\"] = -999.\n",
+    "default_values_rechits[\"cscClusteredRechitsY\"] = -999.\n",
+    "default_values_rechits[\"cscClusteredRechitsZ\"] = -999.\n",
+    "default_values_rechits[\"cscClusteredRechitsTpeak\"] = -999.\n",
+    "default_values_rechits[\"cscClusteredRechitsTwire\"] = -999.\n",
+    "default_values_rechits[\"cscClusteredRechitsChamber\"] = -999\n",
+    "default_values_rechits[\"cscClusteredRechitsStation\"] = -999\n",
     "print(branches_to_read)\n",
     "\n"
    ]
@@ -155,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -210,10 +222,92 @@
       "evtNum 108548\n",
       "nCscRechitClusters 2\n",
       "cscRechitCluster_match_gLLP [False, False]\n",
+      "cscRechitCluster_match_gLLP_minDeltaR [15, 15]\n",
+      "cscRechitCluster_match_gLLP_index [999, 999]\n",
+      "cscRechitCluster_match_gLLP_eta [0, 0]\n",
+      "cscRechitCluster_match_gLLP_phi [0, 0]\n",
+      "cscRechitCluster_match_gLLP_decay_r [-999, -999]\n",
+      "cscRechitCluster_match_gLLP_decay_z [-999, -999]\n",
+      "cscRechitCluster_match_gLLP_csc [False, False]\n",
+      "cscRechitCluster_match_gLLP_dt [False, False]\n",
+      "cscRechitCluster_match_gLLP_e [0, 0]\n",
+      "cscRechitClusterX [-45.6, -492]\n",
+      "cscRechitClusterY [-212, 248]\n",
+      "cscRechitClusterZ [609, 822]\n",
+      "cscRechitClusterTimeWeighted [0.346, 0.058]\n",
+      "cscRechitClusterTimeSpreadWeightedAll [10, 12.9]\n",
+      "cscRechitClusterTime [0.564, 0.915]\n",
+      "cscRechitClusterTimeSpread [10, 13.1]\n",
+      "cscRechitClusternXY [637, 303]\n",
+      "cscRechitClusternZ [637, 303]\n",
+      "cscRechitClusterXSpread [29, 26.7]\n",
+      "cscRechitClusterYSpread [34.3, 26.3]\n",
+      "cscRechitClusterZSpread [25.1, 11]\n",
+      "cscRechitClusterXYSpread [19.6, 7.16]\n",
+      "cscRechitClusterRSpread [37.9, 27.4]\n",
+      "cscRechitClusterEtaPhiSpread [0.0313, 0.0215]\n",
+      "cscRechitClusterEtaSpread [0.129, 0.044]\n",
+      "cscRechitClusterPhiSpread [0.105, 0.0464]\n",
+      "cscRechitClusterDeltaRSpread [0.167, 0.064]\n",
+      "cscRechitClusterMajorAxis [0.13, 0.0502]\n",
+      "cscRechitClusterMinorAxis [0.105, 0.0397]\n",
+      "cscRechitClusterSkewX [-76.4, -4.31]\n",
+      "cscRechitClusterSkewY [-18.3, 4.08]\n",
+      "cscRechitClusterSkewZ [58.6, 11.4]\n",
+      "cscRechitClusterKurtX [9.44, -0.65]\n",
+      "cscRechitClusterKurtY [0.0669, -0.384]\n",
+      "cscRechitClusterKurtZ [7.47, -0.933]\n",
+      "cscRechitClusterPhi [-1.78, 2.67]\n",
       "cscRechitClusterEta [1.76, 1.19]\n",
-      "cscRechitClusterIndex [0, 1]\n",
+      "cscRechitClusterJetVetoPt [0, 0]\n",
+      "cscRechitClusterJetVetoLooseId [False, False]\n",
+      "cscRechitClusterJetVetoTightId [False, False]\n",
+      "cscRechitClusterJetVetoE [0, 0]\n",
+      "cscRechitClusterMuonVetoPt [1.74, 0]\n",
+      "cscRechitClusterMuonVetoE [6.68, 0]\n",
+      "cscRechitClusterMuonVetoLooseId [True, False]\n",
+      "cscRechitClusterMuonVetoGlobal [False, False]\n",
+      "cscRechitCluster_match_dtSeg_0p4 [0, 0]\n",
+      "cscRechitCluster_match_MB1Seg_0p4 [0, 0]\n",
+      "cscRechitCluster_match_RE12_0p4 [0, 0]\n",
+      "cscRechitCluster_match_RB1_0p4 [0, 0]\n",
+      "cscRechitClusterSize [637, 303]\n",
+      "cscRechitClusterNStation10 [1, 1]\n",
+      "cscRechitClusterAvgStation10 [1, 2]\n",
+      "cscRechitClusterMaxStation [1, 2]\n",
+      "cscRechitClusterMaxStationRatio [1, 1]\n",
+      "cscRechitClusterNChamber [1964264688, 1964264688]\n",
+      "cscRechitClusterMaxChamber [1015, 1015]\n",
+      "cscRechitClusterMaxChamberRatio [0.331, 0.696]\n",
+      "cscRechitClusterNRechitChamberPlus11 [607, 0]\n",
+      "cscRechitClusterNRechitChamberPlus12 [30, 0]\n",
+      "cscRechitClusterNRechitChamberPlus13 [0, 0]\n",
+      "cscRechitClusterNRechitChamberPlus21 [0, 0]\n",
+      "cscRechitClusterNRechitChamberPlus22 [0, 303]\n",
+      "cscRechitClusterNRechitChamberPlus31 [0, 0]\n",
+      "cscRechitClusterNRechitChamberPlus32 [0, 0]\n",
+      "cscRechitClusterNRechitChamberPlus41 [0, 0]\n",
+      "cscRechitClusterNRechitChamberPlus42 [0, 0]\n",
+      "cscRechitClusterNRechitChamberMinus11 [0, 0]\n",
+      "cscRechitClusterNRechitChamberMinus12 [0, 0]\n",
+      "cscRechitClusterNRechitChamberMinus13 [0, 0]\n",
+      "cscRechitClusterNRechitChamberMinus21 [0, 0]\n",
+      "cscRechitClusterNRechitChamberMinus22 [0, 0]\n",
+      "cscRechitClusterNRechitChamberMinus31 [0, 0]\n",
+      "cscRechitClusterNRechitChamberMinus32 [0, 0]\n",
+      "cscRechitClusterNRechitChamberMinus41 [0, 0]\n",
+      "cscRechitClusterNRechitChamberMinus42 [0, 0]\n",
+      "cscRechitClusterMet_dPhi [0.154, -1.67]\n",
       "cscClusteredRechitsEta [1.29, 1.29, 1.28, 1.28, 1.28, 1.26, ..., 1.9, 1.92, 1.92, 1.91, 1.91, 1.91]\n",
-      "cscClusteredRechitsIndex [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ..., 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n"
+      "cscClusteredRechitsIndex [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ..., 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n",
+      "cscClusteredRechitsPhi [2.71, 2.72, 2.71, 2.71, 2.72, 2.72, ..., -1.86, -1.86, -1.85, -1.85, -1.85]\n",
+      "cscClusteredRechitsX [-453, -454, -457, -458, -459, -473, ..., -49.6, -49.7, -48.5, -48.5, -48.6]\n",
+      "cscClusteredRechitsY [209, 206, 211, 209, 207, 215, 213, ..., -173, -169, -169, -171, -170, -170]\n",
+      "cscClusteredRechitsZ [840, 840, 840, 840, 840, 840, 840, 840, ..., 586, 586, 586, 586, 586, 586, 586]\n",
+      "cscClusteredRechitsTpeak [11.6, -11.8, 0.644, -44.7, -15, -12.4, ..., -12.1, 34.7, 1.96, -2.44, -1.23]\n",
+      "cscClusteredRechitsTwire [-1.74, -1.74, -1.74, -1.74, -1.74, ..., -3.25, -15.8, -3.25, -3.25, -15.8]\n",
+      "cscClusteredRechitsChamber [22, 22, 22, 22, 22, 22, 22, 22, 22, ..., 11, 11, 11, 11, 11, 11, 11, 11, 11]\n",
+      "cscClusteredRechitsStation [2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, ..., 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1]\n"
      ]
     }
    ],
