readme and other updates

--- a/GCN_test.ipynb
+++ b/GCN_test.ipynb
@@ -5,50 +5,58 @@
    "execution_count": 1,
    "id": "e143d077",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/nfs/dust/cms/user/loewetob/anaconda3/envs/mds_regression/lib/python3.7/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import torch"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "799a7d86",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'pyg'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m/tmp/ipykernel_80507/53020686.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mpyg\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'pyg'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import pyg"
+    "import torch_geometric"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
+   "id": "87cbc275-95eb-4675-aa2a-2bba8af3fe2c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch_cluster import knn_graph"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "id": "67f8a343",
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "id": "6d562538-a3c9-4d6c-89eb-ebd2efee1724",
+   "metadata": {},
+   "source": [
+    "# pytorch\n",
+    "\n",
+    "# GPU install (CUDA 11.7)\n",
+    "conda install pytorch==1.13.1 torchvision==0.14.1 torchaudio==0.13.1 pytorch-cuda=11.7 -c pytorch -c nvidia\n",
+    "# CPU Only\n",
+    "conda install pytorch==1.13.1 torchvision==0.14.1 torchaudio==0.13.1 cpuonly -c pytorch\n",
+    "\n",
+    "# pytorch-geometric\n",
+    "conda install pyg -c pyg\n",
+    "\n",
+    "# pytorch-cluster\n",
+    "conda install pytorch-cluster -c pyg"
    ]
   },
   {
@@ -339,9 +347,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mds_regression",
+   "display_name": "mds_regression2",
    "language": "python",
-   "name": "mds_regression"
+   "name": "mds_regression2"
   },
   "language_info": {
    "codemirror_mode": {
