--- a/intro_pygemoetric.ipynb
+++ b/intro_pygemoetric.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -73,14 +73,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Data(x=[4, 2], edge_index=[2, 8])\n"
+      "Data(x=[6, 2], edge_index=[2, 10])\n"
      ]
     }
    ],
@@ -89,7 +89,7 @@
     "If you want to build the adj matrix starting from your features \n",
     "you can use some of the utilities provided by pygeometric\n",
     "'''\n",
-    "x = torch.tensor([[-1.0, -1.0], [-1.0, 1.0], [1.0, -1.0], [1.0, 1.0]]) # your features\n",
+    "x = torch.tensor([[-1.0, -1.0], [-1.0, 1.0], [1.0, -1.0], [1.0, 1.0], [2.0, 2.0], [-2.0, 2.0]]) # your features\n",
     "\n",
     "'''this next lineassignes each graph to a batch. \n",
     "This is done because in pygeometric batches are not parallelized, but they are concatenated sequentially.\n",
@@ -98,7 +98,7 @@
     "So in the big tensor that will be created by pygeometric, \n",
     "this allows the model to distinguish which graphs belogs to which batch.\n",
     "'''\n",
-    "batch = torch.tensor([0, 0, 0, 0])    \n",
+    "batch = torch.tensor([0, 0, 0, 0, 1, 1])    \n",
     "\n",
     "from torch_geometric.nn import knn_graph\n",
     "#now you can build your adj matrix using the knn_graph \n",
@@ -114,15 +114,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[1, 2, 0, 3, 0, 3, 1, 2],\n",
-      "        [0, 0, 1, 1, 2, 2, 3, 3]])\n"
+      "tensor([[1, 2, 0, 3, 0, 3, 1, 2, 5, 4],\n",
+      "        [0, 0, 1, 1, 2, 2, 3, 3, 4, 5]])\n"
      ]
     }
    ],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,14 +143,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2\n",
+      "3\n",
       "[[[-1.07, -2.74], [-1.07, -2.77], ..., [-1.56, ...], [-1.53, -2.72]], ...]\n",
       "[[{p0: [-1.07, -2.74], p1: [-1.07, ...]}, ..., {p0: [...], p1: ..., ...}], ...]\n",
       "[[[-1.07, -2.74], [-1.07, -2.74], ..., [-1.57, ...], [-1.56, -2.71]], ...]\n",
@@ -160,7 +160,7 @@
     }
    ],
    "source": [
-    "R = 2\n",
+    "R = 3\n",
     "max_h = -1\n",
     "#take only 3 hits for simplicity; otherwise remove [0:3]\n",
     "#phi = ak.Array([ df[\"cscClusteredRechitsPhi\"].loc[nz:nz+1][0:3].values for nz in range(R)  ])\n",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,22 +202,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "<pre>[[0.033, 0.0227, 0.0278, 0.0415, 0.0532, ..., 0.0623, 0.00917, 0.037, 0.0375],\n",
-       " [0.028, 0.0273, 0.0356, 0.0335, ..., 0.00891, 0.0151, 0.00546, 0.00963]]\n",
+       " [0.028, 0.0273, 0.0356, 0.0335, ..., 0.00891, 0.0151, 0.00546, 0.00963],\n",
+       " [0.00737, 0.0108, 0.00612, 0.00702, ..., 0.0125, 0.0121, 0.0126, 0.00971]]\n",
        "------------------------------------------------------------------------------\n",
-       "type: 2 * var * float64</pre>"
+       "type: 3 * var * float64</pre>"
       ],
       "text/plain": [
-       "<Array [[0.033, 0.0227, ..., 0.037, 0.0375], ...] type='2 * var * float64'>"
+       "<Array [[0.033, 0.0227, ..., 0.037, 0.0375], ...] type='3 * var * float64'>"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -246,19 +247,26 @@
       "[[{p0: [-1.6, -2.8], p1: [-1.6, -2.8]}, ..., {p0: [...], p1: [...]}], ...]\n",
       "Node indices of the selected neighbour combinations\n",
       "This does not include self-interactions\n",
-      "[[(141, 142) (261, 262) (288, 289) (304, 305) (322, 323) (335, 336)\n",
-      "  (347, 348) (351, 352) (399, 400) (399, 401) (400, 401) (401, 402)\n",
-      "  (402, 403) (411, 412) (412, 414) (413, 414) (434, 435) (457, 458)\n",
-      "  (460, 461) (503, 504)]\n",
-      " [( 16,  17) ( 31,  32) ( 31,  33) ( 31,  34) ( 32,  33) ( 32,  34)\n",
-      "  ( 33,  34) ( 34,  35) ( 43,  44) ( 43,  46) ( 44,  45) ( 44,  46)\n",
-      "  ( 45,  46) ( 65,  67) ( 66,  67) ( 89,  90) ( 92,  93) (135, 136)\n",
-      "  (145, 146) (223, 224)]]\n",
+      "[[( 141,  142) ( 261,  262) ( 288,  289) ( 304,  305) ( 322,  323)\n",
+      "  ( 335,  336) ( 347,  348) ( 351,  352) ( 399,  400) ( 399,  401)\n",
+      "  ( 400,  401) ( 401,  402) ( 402,  403) ( 411,  412) ( 412,  414)\n",
+      "  ( 413,  414) ( 434,  435) ( 457,  458) ( 460,  461) ( 503,  504)]\n",
+      " [(  16,   17) (  31,   32) (  31,   33) (  31,   34) (  32,   33)\n",
+      "  (  32,   34) (  33,   34) (  34,   35) (  43,   44) (  43,   46)\n",
+      "  (  44,   45) (  44,   46) (  45,   46) (  65,   67) (  66,   67)\n",
+      "  (  89,   90) (  92,   93) ( 135,  136) ( 145,  146) ( 223,  224)]\n",
+      " [(   4,    5) ( 539,  540) ( 557,  558) ( 573,  574) ( 594,  595)\n",
+      "  ( 602,  603) ( 670,  671) ( 918,  919) ( 977,  978) ( 988,  989)\n",
+      "  ( 990,  991) ( 995,  996) (1251, 1252) (1364, 1365) (1421, 1422)\n",
+      "  (1448, 1449) (1492, 1493) (1625, 1626) (1655, 1656) (1720, 1721)]]\n",
       "[[[141 261 288 304 322]\n",
       "  [142 262 289 305 323]]\n",
       "\n",
       " [[ 16  31  31  31  32]\n",
-      "  [ 17  32  33  34  33]]]\n"
+      "  [ 17  32  33  34  33]]\n",
+      "\n",
+      " [[  4 539 557 573 594]\n",
+      "  [  5 540 558 574 595]]]\n"
      ]
     }
    ],
@@ -285,7 +293,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[-1.0680, -2.7377],\n",
+      "        [-1.0690, -2.7706],\n",
+      "        [-1.0688, -2.7604],\n",
+      "        ...,\n",
+      "        [ 2.3385, -2.3278],\n",
+      "        [ 2.3477, -2.3199],\n",
+      "        [ 2.3511, -2.3290]], dtype=torch.float64)\n",
+      "tensor([[   2,    3,    1,  ..., 2656, 2624, 2670],\n",
+      "        [   0,    0,    0,  ..., 2680, 2680, 2680]])\n",
+      "tensor([0, 0, 0,  ..., 2, 2, 2])\n",
+      "Data(x=[2681, 2], edge_index=[2, 53620])\n",
+      "tensor([[   2,    3,    1,  ..., 2656, 2624, 2670],\n",
+      "        [   0,    0,    0,  ..., 2680, 2680, 2680]])\n",
+      "Data(x=[2681, 2], edge_index=[3, 2, 20])\n",
+      "tensor([[[ 141,  261,  288,  304,  322,  335,  347,  351,  399,  399,  400,\n",
+      "           401,  402,  411,  412,  413,  434,  457,  460,  503],\n",
+      "         [ 142,  262,  289,  305,  323,  336,  348,  352,  400,  401,  401,\n",
+      "           402,  403,  412,  414,  414,  435,  458,  461,  504]],\n",
+      "\n",
+      "        [[  16,   31,   31,   31,   32,   32,   33,   34,   43,   43,   44,\n",
+      "            44,   45,   65,   66,   89,   92,  135,  145,  223],\n",
+      "         [  17,   32,   33,   34,   33,   34,   34,   35,   44,   46,   45,\n",
+      "            46,   46,   67,   67,   90,   93,  136,  146,  224]],\n",
+      "\n",
+      "        [[   4,  539,  557,  573,  594,  602,  670,  918,  977,  988,  990,\n",
+      "           995, 1251, 1364, 1421, 1448, 1492, 1625, 1655, 1720],\n",
+      "         [   5,  540,  558,  574,  595,  603,  671,  919,  978,  989,  991,\n",
+      "           996, 1252, 1365, 1422, 1449, 1493, 1626, 1656, 1721]]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "from torch_geometric.data import Data\n",
+    "\n",
+    "#create batch vector for knn\n",
+    "R = ak.num(points)\n",
+    "N = len(R)\n",
+    "i_batch = []\n",
+    "for n in range(N):\n",
+    "    i_batch += np.repeat(n,R[n]).tolist()\n",
+    "i_batch = np.array(i_batch)\n",
+    "\n",
+    "x = torch.tensor(ak.flatten(points)) # your features\n",
+    "batch = torch.tensor(i_batch)    \n",
+    "\n",
+    "from torch_geometric.nn import knn_graph\n",
+    "#now you can build your adj matrix using the knn_graph \n",
+    "#function https://pytorch-geometric.readthedocs.io/en/latest/generated/torch_geometric.nn.pool.knn_graph.html?highlight=knn_graph#torch_geometric.nn.pool.knn_graph\n",
+    "edge_index = knn_graph(x, k=K, batch=batch, loop=False)\n",
+    "print(x)\n",
+    "print(edge_index)\n",
+    "print(batch)\n",
+    "#print(final_indices)\n",
+    "#one can also use other functions to build the adj matrix, more info in the documentation\n",
+    "\n",
+    "#finally you can create your data object like before\n",
+    "data = Data(x=x, edge_index=edge_index) # new data object containing the features and the edge index\n",
+    "print(data)\n",
+    "print (data.edge_index)\n",
+    "\n",
+    "#warning: this currently gives a different structure because it's not \"batched\"!\n",
+    "data = Data(x=x, edge_index=torch.tensor(final_indices))\n",
+    "print(data)\n",
+    "print(data.edge_index)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
    "metadata": {},
    "outputs": [
     {
