new code structure

--- a/train_model_tobias_pytorch.ipynb
+++ b/train_model_tobias_pytorch.ipynb
@@ -156,7 +156,9 @@
    "cell_type": "code",
    "execution_count": 6,
    "id": "0283cd49",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "model = MyModel(input_size=25)\n",
