--- a/train_model_tobias.ipynb
+++ b/train_model_tobias.ipynb
@@ -340,7 +340,13 @@
    "cell_type": "code",
    "execution_count": 12,
    "id": "0ab359b5-8d14-4e9e-a66d-fc38e993e0ba",
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    },
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3111,9 +3117,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mds_regression",
+   "display_name": "mds_regression_pyg",
    "language": "python",
-   "name": "mds_regression"
+   "name": "mds_regression_pyg"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3125,7 +3131,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
